<resources>
    <string name="app_name">unit-2-layouts</string>
    <string name="cost_of_service_text">Cost of Service</string>
    <string name="how_was_the_service_text">How was the service?</string>
    <string name="amazing_20_text_option">Amazing (20%)</string>
    <string name="good_18_text_option">Good (18%)</string>
    <string name="okay_15_text_option">Okay (15%)</string>
    <string name="round_up_tip_text">Round up tip?</string>
    <string name="calculate_text_button">Calculate</string>
    <string name="tip_amount_text_result">Tip Amount: %s</string>
</resources>